--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <li><a href="#">Products</a></li>
             <li><a href="#">Blog</a></li>
             <li>
-              <a href="#"><b>Contact</b></a>
+              <a href="contact.html"><b>Contact</b></a>
             </li>
           </ul>
         </div>
